<?xml version="1.0"?>
<package format="3">
  <name>behaviortree_cpp_v3</name>
  <version>3.7.0</version>
  <description>
  This package provides the Behavior Trees core library.
  </description>

  <maintainer email="davide.faconti@gmail.com">Davide Faconti</maintainer>

  <license>MIT</license>

  <author>Michele Colledanchise</author>
  <author>Davide Faconti</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>ament_index_cpp</depend>

  <depend>boost</depend>
  <depend>libzmq3-dev</depend>
  <depend>libncurses-dev</depend>
  
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>

</package>
